--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "silex/silex": "~1.1",
         "symfony/yaml": "*",
         "symfony/translation": "~2.3",
-        "symfony/twig-bridge": "~2.3"
+        "symfony/twig-bridge": "~2.3",
+        "swiftmailer/swiftmailer": ">=4.1.2,<4.2-dev"
     }
 }
